--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
+    font-family: 'poppins';
 }
 :root{
     --bg1:#890F6E;
@@ -11,6 +12,12 @@
     --txt3:#F6F6F6;
     --txt4:#ffffff;
     --banner:#c75a00;
+    --pink: #d48fac;
+    --bg3:#fff;
+    --txt8:#000;
+}
+p{
+    font-size: 14px;
 }
 .container{
     width: 100%;
@@ -20,54 +27,145 @@ header{
     position: relative;
     height: 100vh;
     overflow: hidden;
-    background: var(--banner);
+    background: var(--pink);
 
 }
 header img{
     width: 900px;
     height: 900px;
     position: absolute;
-    left: 58%;
-    top: 20px;
+    left: 45%;
+    top: 10%;
+    z-index: 3;
+    transition: 1s ease all;
+}
+header img:hover{
+    margin-top: 10px;
+    cursor: pointer;
+    
+}
+.circle{
+    border-radius: 30% 70% 67% 33% / 30% 30% 70% 70% ;
+    width: 350px;
+    height: 350px;
+    background: #ddd;
+    position: absolute;
+    left: 62%;
+    top: 130px;
+    z-index: 2;
 }
 .bio{
     position: absolute;
-    top: 400px;
+    top: 250px;
     left: 40px;
     margin-left: 80px;
 }
 .bio h1{
-    color: var(--txt4);
-    font-size: 80px;
+    color: var(--txt8);
+    font-size: 20px;
+    font-family: 'Pacifico';
+    font-weight: 100;
 }
+.bio h2{
+    color: var(--txt8);
+    font-size: 40px;
+    font-family: 'Nova Square';
+}
+
 .bio p{
-    margin-top: 10px;
-    font-size: 16px;
+    margin-top: 8px;
+    font-size: 13px;
     line-height: 15px;
-    color: wheat;
+    color: var(--txt8);
+}
+.btn-wrap{
+    padding-top: 20px;
+    margin-bottom: 20px;
+}
+.btn{
+    padding:5px 15px 5px 15px;
+    border-radius: 5px;
+    transition: 0.5s ease all;
+    background: white;
+    color: var(--txt8);
+}
+.btn:hover{
+    background: transparent;
+    border: 1px solid var(--txt3);
+    color: var(--txt8);
+}
+.icons{
+    margin-top: 130px;
+    display: flex;
+    gap: 20px;
+}
+.icons i{
+    font-size: 20px;
+    transition: 0.5s ease all;
+}
+.icons i:hover{
+    color: #ffffff;
+    cursor: pointer;
 }
 .nav{
-    background:  var(--txt3);
+    /*background:  var(--txt3);*/
     display: flex;
     justify-content:space-between ;
     align-items: center;
     padding: 20px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    transition: ease 0.5s all;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
 }
 .nav-links{
     display: flex;
     gap:2rem;
 }
+.logo h1{
+    color: var(--txt8);
+    font-family: 'Nova Square';
+}
+
+.links a{
+    color: var(--txt8);
+    cursor: pointer;
+    transition: 1s ease all;
+}
+
+.links a:hover{
+    cursor: pointer;
+    color: #fff;
+    
+}
 .about{
     width: 100%;
-    height: 60vh;
+    height: 90vh;
+    padding: 50px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    
+}
+.wrapper{
+    width: 90%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 400px 1fr;
+    gap: 30px;
+
+}
+.image img{
+    width: 350px;
+    height: 350px;
 }
 .about-info{
-    width: 60%;
-    padding: 20px;
-    text-align: center;
+    text-align: start;
 }
 .about-info h2{
     color: var(--bg1);
@@ -76,43 +174,68 @@ header img{
 }
 .about-info p{
     line-height: 30px;
-    font-size: 18px;
+    font-size: 14px;
 }
 .services{
     text-align: center;
+    background-color: rgba(252, 155, 187, 0.062);
+    width: 100%;
+
+    height: 100vh;
+    padding: 30px;
+}
+.service-head h1, .test-title h1{
+    color: #890F6E;
 }
 .service-wrap{
-    width: 80%;
-    height: 80vh;
+    width: 90%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
 }
 .card{
     background: var(--txt4);
     padding: 30px;
-    background: var(--txt3);
+    text-align: start;
+    transition: 0.5s ease all;
 }
-.gallery {
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 10px;
-    
+.card h1{
+    font-size: 16px;
+}
+.card:hover{
+    background: #F6F6F6;
+    cursor: pointer;
+    box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
+/*------------gallery css-----------*/
+.gallery {
+    width: 100%;
+    height: fit-content;
+    text-align: center;
+    padding: 20px;
+    margin-top: 10px;
+    margin-top: 30px;
+    
+}
+.title{
+    font-family: 'Pacifico';
+    color: #890F6E;
+    font-weight: 100;
+}
 .galla {
     width: 80%;
+    height: 80%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
     padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .galla img {
@@ -126,11 +249,19 @@ header img{
 .galla img:hover {
     transform: scale(1.1);
 }
+
 .test{
-    background-color: #fff;
+    background-color: rgba(252, 155, 187, 0.062);
     width: 100%;
     height: fit-content;
     padding: 10px;
+}
+.test-title{
+    text-align: center;
+    margin-top: 80px;
+}
+.test-title p{
+    font-size: 14px;
 }
 .testimonial-section {
     width: 80%;
@@ -142,7 +273,6 @@ header img{
     flex-direction: row;
     align-items: center;
     gap: 20px;
-    background: var(--txt3);
 }
 
 .testimonial {
@@ -150,6 +280,8 @@ header img{
     border: 1px solid #ddd;
     border-radius: 8px;
     margin-bottom: 20px;
+    background: #fff;
+    
     
 }
 
@@ -168,4 +300,38 @@ header img{
 .testimonial p {
     color: #666;
     line-height: 1.6;
+}
+.rating i{
+    color: rgb(252, 132, 212);
+}
+footer{
+    width: 100%;
+    padding: 20px;
+    background: var(--txt);
+
+}
+.footerinfo{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 12px;
+}
+.info p, .info a{
+    font-size: 12px;
+    color: #d8d7d7;
+}
+.info input{
+    padding: 10px;
+    outline: none;
+}
+.info span{
+    padding:13px 10px 13px 10px;
+    background:rgb(143, 15, 100);
+    color: #fff;
+}
+.info span{
+    cursor: pointer;
 }
